# 202301-UFMG-DCCML

./: .gitignore
TP1/: README.md  convert.sh  iterative.ipynb  main.ipynb  pyproject.toml  run_all.ipynb
TP2/: adaboost.py  convert.sh  decision_stump.py  download_data.py  main.ipynb  pyproject.toml
