[tool.poetry]
name = "TP1"
version = "0.1.0"
description = ""
authors = ["Gustavo Maia"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
pandas = "^2.0.1"
scikit-learn = "^1.2.2"
matplotlib = "^3.7.1"
tqdm = "^4.65.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
